jobber-k8s/AWS/1-gateway/gateway-external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-external-dns
  namespace: production
  labels:
    app.kubernetes.io/name: gateway-external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway-external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gateway-external-dns
    spec:
      serviceAccountName: gateway-external-dns
      containers:
        - name: gateway-external-dns
          # Get current version here
          # https://github.com/kubernetes-sigs/external-dns/releases
          image: registry.k8s.io/external-dns/external-dns:v0.14.0
          args:
            - --source=service
            - --source=ingress
            - --provider=aws
            - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
            - --registry=txt
            - --txt-owner-id=gateway-external-dns
            - --domain-filter=api.jobberapp.kevmendeveloper.com
          resources:
            limits:
              cpu: '0.5'
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 150Mi
      securityContext:
        fsGroup: 65534 # For ExternalDNS to be able to read Kubernetes and AWS token files
