jobber-k8s/AWS/1-gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobber-gateway
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobber-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25% 
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: jobber-gateway
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - jobber-gateway
              topologyKey: kubernetes.io/hostname
      containers:
      - name: jobber-gateway
        image: kevin1208/jobber-gateway:stable
        imagePullPolicy: Always
        resources:
          limits:
            cpu: '0.5'
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 150Mi
        ports:
        - name: gateway
          containerPort: 4000
        readinessProbe:
          httpGet:
            path: /gateway-health
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /gateway-health
            port: 4000
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
